syntax = "proto3";
package poktroll.shared;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pokt-network/poktroll/x/shared/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "poktroll/x/shared/Params";
  option (gogoproto.equal) = true;

  // num_blocks_per_session is the number of blocks between the session start & end heights.
  uint64 num_blocks_per_session = 1 [(gogoproto.jsontag) = "num_blocks_per_session"];
  // claim_window_open_offset_blocks is the number of blocks after the session grace
  // period height, at which the claim window opens.
  uint64 claim_window_open_offset_blocks = 2 [(gogoproto.jsontag) = "claim_window_open_offset_blocks"];
}